--- a/src/jamtaba/gui/mainframe.ui
+++ b/src/jamtaba/gui/mainframe.ui
@@ -6,9 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>845</width>
-    <height>400</height>
+    <width>1160</width>
+    <height>750</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>1160</width>
+    <height>750</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string notr="true">Jamtaba</string>
@@ -208,7 +214,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>845</width>
+     <width>1160</width>
      <height>21</height>
     </rect>
    </property>
