--- a/src/jamtaba/resources/jamtaba.css
+++ b/src/jamtaba/resources/jamtaba.css
@@ -3,13 +3,114 @@
     font-size: 9pt;
 }
 
+/* common widgets */
+
+.QLineEdit{
+    border-radius: 10px;
+    padding: 2px;
+    background: rgb(100, 100, 100);
+    color: white;
+    border: 1px solid rgb(51, 51, 51);
+}
+
+
+
+QCheckBox::indicator {
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(179, 179, 179), stop:1 rgb(100, 100, 100));
+    border: 1px solid rgb(80, 80, 80); /*qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(120, 120, 120), stop:1 rgb(44,44,44));*/
+    border-radius: 2px;
+}
+
+QCheckBox::indicator:hover {
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(100, 100, 100), stop:1 rgb(179, 179, 179));
+}
+
+QCheckBox::indicator:checked#mute {
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.9, stop:0 rgb(255, 90, 62), stop:1 rgb(175, 0, 0));
+    border: 1px solid black;
+}
+
+QCheckBox::indicator:checked#solo {
+    background-color: qlineargradient(x1:0, y1:0, x2:0, y2:0.95, stop:0 rgb(90, 255, 62), stop:1 rgb(0, 175, 0));
+    border: 1px solid gray;
+}
+
+ QCheckBox::indicator:hover:checked#mute {
+     border: 1px solid red;
+}
+QCheckBox::indicator:hover:checked#solo{
+    border: 1px solid blue;
+}
+
+
+QSlider::add-page:vertical, QSlider::groove:vertical {
+    border: 1px solid rgba(0, 0, 0, 30);
+    border-radius: 3px;
+}
+
+QSlider::groove:vertical {
+    background-color: rgba(0, 0, 0, 20);
+    width: 8px;
+}
+
+QSlider::handle:vertical {
+    background: url(:/images/fader_shadow.png) no-repeat center center;
+
+    height: 45px;
+    width: 22px;
+    margin-left: -10px;
+    margin-right: -10px;
+    margin-bottom: 0px;
+}
+
+QSlider::add-page:vertical {
+    background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgba(255, 255, 255, 150), stop:1 rgba(255, 255, 255, 10));
+    border-top-left-radius: 0px;
+    border-top-right-radius: 0px;
+    margin: 3px;
+
+}
+
+PeakMeter{
+    background-color: rgba(0, 0, 0, 50);
+    border-radius: 10px;
+    border: 0px solid;
+}
+
+/*
+QSlider::groove:vertical {
+     background: yellow;
+     position: absolute;
+     left: 6px; right: 6px;
+     width: 17px;
+     border-radius: 3px;
+     border: 1px solid black;
+     padding: 3px;
+ }
+
+ QSlider::handle:vertical {
+     height: 10px;
+     background: green;
+     margin: 0 -4px;
+ }
+*/
+
+
+/*
+QCheckBox::indicator:pressed {
+    background: url(...);
+}
+*/
+
 QMainWindow{
     background-color: rgb(60, 60, 60);
 }
 
 
+
+
 /* painéis principais */
-QWidget#leftPanel, QWidget#chatPanel, QWidget#onlineUsersPanel, QWidget#contentPanel{
+.QWidget#leftPanel, .QWidget#chatPanel, .QWidget#onlineUsersPanel, .QWidget#contentPanel{
     background: url(:/images/gradient.bmp) repeat-x;
     background-color: rgb(39, 39, 39);
     border: 1px solid rgb(45, 45, 45);
@@ -18,27 +119,27 @@ QWidget#leftPanel, QWidget#chatPanel, QWidget#onlineUsersPanel, QWidget#contentP
 }
 
 /* títulos dos painéis principais */
-QWidget#leftPanel .QLabel, QWidget#chatPanel .QLabel, QWidget#onlineUsersPanel .QLabel, QWidget#contentPanel .QLabel{
+.QWidget#leftPanel > .QLabel, .QWidget#chatPanel  > .QLabel, .QWidget#onlineUsersPanel > .QLabel, .QWidget#contentPanel > .QLabel{
     font-size: 10pt;
     color: rgb(190, 190, 190);
     qproperty-alignment: AlignCenter;
 }
 
 /* define os separadores horizontais abaixo dos títulos as seções principais   */
-QWidget#leftPanel .QFrame, QWidget#chatPanel .QFrame, QWidget#onlineUsersPanel .QFrame{
+.QWidget#leftPanel > .QFrame, .QWidget#chatPanel > .QFrame, .QWidget#onlineUsersPanel > .QFrame{
     background-color: rgb(80,80,80);
 }
 
-QWidget#contentPanel .QFrame{
+.QWidget#contentPanel > .QFrame{
     background-color: rgb(122, 122, 122);
 }
 /* ------------------------------ */
 
-QWidget#contentPanel{
+.QWidget#contentPanel{
     background: rgb(128, 128, 128);
 }
 
-QMainWindow QGroupBox::title {
+.QMainWindow .QGroupBox::title {
      subcontrol-origin: margin;
      subcontrol-position: top center; /* position at the top center */
      padding: 10 3px;
@@ -54,10 +155,28 @@ TrackView{
     border-radius: 5px;
     background: qlineargradient(x1:0, y1:0, x2:0, y2:1, stop:0 rgb(220, 220, 220), stop:1 rgb(100, 100, 100));
     border: 1px solid rgb(61,61,61);
-
-/*
- private Color borderLightColor = new Color(1, 1, 1, 0.1f);
-    private Color borderDarkColor = new Color(0, 0, 0, 0.2f);
-*/
-
 }
+
+TrackView  > .QLabel#trackName {
+    color: rgb(0, 0, 0);
+    font-weight: bold;
+    margin-top:5px;
+}
+
+TrackView  > .QLineEdit#channelName {
+    margin-bottom: 10px;
+}
+
+
+TrackView > .QFrame#topSeparator{
+    background-color: rgb(210, 210, 210);
+}
+
+TrackView > .QFrame#panSectionSeparator{
+    background-color: rgb(180, 180, 180);
+}
+
+TrackView > .QFrame#bottomSectionSeparator{
+    background-color: rgb(120, 120, 120);
+}
+
