melhorias no gerenciamento de memria usando unique_ptr e shared_ptr.

--- a/src/jamtaba/gui/audioiodialog.ui
+++ b/src/jamtaba/gui/audioiodialog.ui
@@ -142,7 +142,7 @@
    <property name="title">
     <string>Outpus</string>
    </property>
-   <widget class="QWidget" name="layoutWidget">
+   <widget class="QWidget" name="layoutWidget1">
     <property name="geometry">
      <rect>
       <x>11</x>
