--- a/src/jamtaba/gui/jamroomviewpanel.ui
+++ b/src/jamtaba/gui/jamroomviewpanel.ui
@@ -65,6 +65,9 @@
         <property name="text">
          <string>listen</string>
         </property>
+        <property name="checkable">
+         <bool>true</bool>
+        </property>
        </widget>
       </item>
       <item row="2" column="3">
