--- a/Client/src/jamtaba/gui/jamroomviewpanel.ui
+++ b/Client/src/jamtaba/gui/jamroomviewpanel.ui
@@ -136,7 +136,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QWidget" name="plotPanel" native="true">
+       <widget class="WavePeakPanel" name="wavePeakPanel" native="true">
         <property name="sizePolicy">
          <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
           <horstretch>2</horstretch>
@@ -172,6 +172,14 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>WavePeakPanel</class>
+   <extends>QWidget</extends>
+   <header>widgets/WavePeakPanel.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
